doc: thesis updated, corrected misc errors, 1st section

--- a/thesis/document/tex/bibliography/books.bib
+++ b/thesis/document/tex/bibliography/books.bib
@@ -59,15 +59,6 @@
 	isbn = {8320607167}
 }
 
-@Book{hennel2010jak,
-	author = {Hennel, Jacek},
-	title = {Jak zrozumieć falki: podstawy falkowej analizy sygnałów},
-	publisher = {ZamKor},
-	year = {2010},
-	address = {Kraków},
-	isbn = {9788360793732}
-}
-
 @Book{jackowski2005telekomunikacja,
 	author = {Jackowski, Stefan},
 	title = {Telekomunikacja},
@@ -84,15 +75,6 @@
 	year = {2014},
 	address = {Gdańsk},
 	isbn = {9788373485525}
-}
-
-@Book{bialasiewicz2004falki,
-	author = {Białasiewicz, Jan},
-	title = {Falki i~aproksymacje},
-	publisher = {Wydawnictwa Naukowo-Techniczne},
-	year = {2004},
-	address = {Warszawa},
-	isbn = {8320429714}
 }
 
 @Book{zielinski2014cyfrowe,
@@ -185,14 +167,6 @@
 	isbn = {978-0-470-84689-6}
 }
 
-@Book{gast2003802.11,
-	author = {Gast, Matthew},
-	title = {802.11 - sieci bezprzewodowe: przewodnik encyklopedyczny},
-	publisher = {Helion},
-	year = {2003},
-	address = {Gliwice},
-	isbn = {8373611630}
-}
 
 @Book{majewski2007uklady,
 	author = {Majewski, Jacek},
@@ -214,12 +188,40 @@
 
 @Book{holubowicz1998systemy,
 	author = {Hołubowicz, Witold},
-	title = {Systemy radiowe z rozpraszaniem widma, CDMA: teoria, standardy, aplikacje},
+	title = {Systemy radiowe z~rozpraszaniem widma, CDMA: teoria, standardy, aplikacje},
 	publisher = {Motorola Polska},
 	year = {1998},
 	address = {Poznań},
 	isbn = {8390988011}
 }
+
+@Book{choras14przetwarzanie,
+	author = {Choraś, Ryszard},
+	title = {Przetwarzanie sygnałów},
+	publisher = {Wydawnictwa Uczelniane Uniwersytetu Technologiczno-Przyrodniczego},
+	year = {2014},
+	address = {Bydgoszcz},
+	isbn = {9788364235498}
+}
+
+@Book{kester2012przetworniki,
+	author = {Kester, Walt},
+	title = {Przetworniki A/C i C/A: teoria i praktyka},
+	publisher = {Wydawnictwo BTC},
+	year = {2012},
+	address = {Legionowo},
+	isbn = {978-83-60233-88-7}
+}
+
+@Book{kwiatkowski2003wstep,
+	author = {Kwiatkowski, Włodzimierz},
+	title = {Wstęp do cyfrowego przetwarzania sygnałów},
+	publisher = {Wojskowa Akademia Techniczna},
+	year = {2003},
+	address = {Warszawa},
+	isbn = {8391675343}
+}
+
 
 
 
