--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -128,3 +128,17 @@
 	year = {2014}
 }
 
+@misc{ti13ousampl,
+	author = "{Texas Instruments}",
+	title = "\textit{SLAA594A: Why Oversample when Undersampling can do the Job?}",
+	howpublished = {\url{http://www.ti.com/lit/an/slaa594a/slaa594a.pdf}},
+	year = {2013}
+}
+
+@misc{ti11adcbasics,
+	author = "{Texas Instruments}",
+	title = "\textit{SLAA510: High-Speed, Analog-to-Digital Converter Basics}",
+	howpublished = {\url{http://www.ti.com/lit/an/slaa510/slaa510.pdf}},
+	year = {2011}
+}
+
