--- a/thesis/document/tex/bibliography/papers.bib
+++ b/thesis/document/tex/bibliography/papers.bib
@@ -7,7 +7,7 @@
 	author = {Derek Redmayne},
 	title = {\textit{A Short Course in PCB Layout for High-Speed ADCs}},
 	howpublished = {\url{http://www.linear.com/solutions/1809}},
-%	note = "Dostęp 25.02.2016"
+	%note = "Dostęp 25.02.2016"
 	year = 2013 
 }
 
@@ -42,8 +42,17 @@
 
 @article{ott01pcb,
 	author  = {{Henry W.} Ott}, 
-	title   = {\textit{Partitioning and Layout of a Mixed-Signal PCB}},
+	title   = {\textit{Partitioning and Layout of a~Mixed-Signal PCB}},
 	journal = {Printer Circuit Design \& Fab},
 	year    = 2001
+}
+
+@article{kap04ddc,
+	author  = {Mariusz Kapruziak and Bogdan Olech}, 
+	title   = {\textit{Dedykowany procesor do cyfrowej kowersji częstotliwości w~dół}},
+	journal = {Poznańskie Warsztaty Telekomunikacyjne},
+	year    = 2004,
+	number  = 9,
+	pages   = {261-265},
 }
 
