--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -38,3 +38,7 @@
 
 \newglossaryentry{dtmf}{name={DTMF}, description={(\textit{ang. Dual Tone Multi Frequency}) --- system sygnalizacji pomiędzy urządzeniami telefonicznymi}}
 
+\newglossaryentry{spice}{name={SPICE}, description={(\textit{ang. Simulation Program with Integrated Circuits Emphasis}) --- oprogramowanie symulujące analogowe układy elektroniczne oraz schematy ideowe}}
+
+\newglossaryentry{cic}{name={CIC}, description={(\textit{ang. Cascaded Integrator–Comb}) --- }}
+
