doc: thesis - fixed itemize alignment, added abstract in english

--- a/thesis/document/tex/abstract.tex
+++ b/thesis/document/tex/abstract.tex
@@ -25,5 +25,12 @@ interpretuje przesłane przez układ dane.
 }
 \vspace*{0.5cm}
 
-Maecenas eleifend venenatis tempor. Etiam tincidunt risus purus. Nulla aliquam nunc ex, sit amet elementum massa pellentesque feugiat. Donec sed turpis ut tellus vulputate dignissim. Cras nibh velit, rhoncus nec sodales vitae, auctor vel enim. Donec auctor felis quis lacus mollis porttitor. Morbi eu nulla id lectus tristique tincidunt ut blandit arcu. Sed mattis finibus ipsum, sit amet mollis quam tristique a. Curabitur nisl orci, suscipit nec odio ut, volutpat laoreet turpis. Fusce nec interdum felis, non sollicitudin lectus. Fusce tristique, ipsum eu convallis volutpat, lacus massa feugiat mauris, ac tincidunt massa felis ut libero. Cras interdum, lorem eget viverra pellentesque, nisi arcu suscipit velit, et laoreet ipsum lectus nec ligula.
-
+The thesis covers research on issues of digital signal processing, especially
+wireless and radio signals. The project has a~goal to apply software defined
+radio technique in \gls{fpga} environment. Hardware implementation designed by
+the author is a~printed circuit board using several integrated circuits
+which aim is to preliminary processing of a signal from analog to digital form.
+Software implementation is a~\gls{fpga} project in Verilog hardware description
+language in which an angorithm of processing input signal is written. Finally,
+an application in Python language reads data sent by \gls{pcb} to a~PC and
+converts it into readable form.
