--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -6,8 +6,8 @@
 
 \usepackage {amsmath}
 
-\usepackage [unicode]{hyperref}
-%\usepackage [unicode,hidelinks]{hyperref}
+%\usepackage [unicode]{hyperref}
+\usepackage [unicode,hidelinks]{hyperref}
 
 \makeatletter
 \hypersetup {pdfauthor={\@author}}
@@ -25,6 +25,8 @@
 \usepackage {caption}
 
 %\usepackage {makeidx}
+
+\usepackage {enumitem} %indent properly line below item in itemize
 
 \usepackage {xcolor}
 
