doc: thesis - added cic, uart subpars

--- a/thesis/document/tex/bibliography/papers.bib
+++ b/thesis/document/tex/bibliography/papers.bib
@@ -56,3 +56,16 @@
 	pages   = {261-265},
 }
 
+@article{hog81cic,
+	doi		= {10.1109/tassp.1981.1163535},
+	title	= {An economical class of digital filters for decimation and interpolation},
+	author	= {Eugene Hogenauer},
+	publisher	= {IEEE},
+	journal	= {IEEE Transactions on Acoustics Speech and Signal Processing},
+	issnp	= {0096-3518},
+	year	= {1981},
+	volume	= {29},
+	issue	= {2},
+	page	= {155--162},
+	url		= {http://gen.lib.rus.ec/scimag/index.php?s=10.1109/tassp.1981.1163535},
+}
