--- a/thesis/document/tex/setups.tex
+++ b/thesis/document/tex/setups.tex
@@ -22,7 +22,9 @@
 
 \usepackage {moreverb}
 
-\usepackage {caption}
+\usepackage [justification=centering]{caption}
+
+\usepackage{placeins}
 
 %\usepackage {makeidx}
 
