doc: thesis updated according to professor suggestions

--- a/thesis/document/tex/abstract.tex
+++ b/thesis/document/tex/abstract.tex
@@ -11,7 +11,7 @@
 Praca dyplomowa obejmuje badania zagadnień przetwarzania sygnałów,
 w~szczególności radiowych. Prezentowany projekt ma na celu zastosowanie
 techniki programowalnego radia w~środowisku \gls{fpga}. Implementacja sprzętowa
-to zaprojektowana przez autora płytka drukowana, w~której użyto układów
+to zaprojektowany przez autora schemat ideowy oraz płytka drukowana, w~której użyto układów
 radiowych, zadaniem których jest wstępna obróbka oraz przetworzenie sygnału
 z~postaci analogowej do cyfrowej. Implementacja programowa to projekt \gls{fpga}
 w~języku opisu sprzętu Verilog, w~którym zapisano algorytm przetwarzający
@@ -28,7 +28,7 @@ interpretuje przesłane przez układ dane.
 The thesis covers research on issues of digital signal processing, especially
 wireless and radio signals. The project has a~goal to apply software defined
 radio technique in \gls{fpga} environment. Hardware implementation designed by
-the author is a~printed circuit board using several integrated circuits
+the author consists schematic design and a~printed circuit board in which he uses several integrated circuits
 which aim is to preliminary processing of a signal from analog to digital form.
 Software implementation is a~\gls{fpga} project in Verilog hardware description
 language in which an angorithm of processing input signal is written. Finally,
