--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -142,3 +142,80 @@
 	year = {2011}
 }
 
+
+%%%
+%%%
+%%%
+
+@misc{usrp,
+	author = "{Ettus Research}",
+	title = "\textit{USRP Software Defined Radio}",
+	howpublished = {\url{https://www.ettus.com/product}},
+}
+
+@misc{hackrf,
+	author = "{Great Scott Gadgets}",
+	title = "\textit{HackRF One}",
+	howpublished = {\url{https://greatscottgadgets.com/hackrf/}},
+}
+
+@misc{sdrlist,
+	author = "{Wikipedia}",
+	title = "\textit{List of software-defined radios}",
+	howpublished = {\url{https://en.wikipedia.org/wiki/List_of_software-defined_radios}},
+}
+
+@misc{qucs,
+	author = "{Qucs}",
+	title = "\textit{Quite Universal Circuit Simulator}",
+	howpublished = {\url{http://qucs.sourceforge.net/}},
+}
+
+@misc{opup,
+	author = "{Opendous}",
+	title = "\textit{Upconverter 125 MHz: Passive Upconverter Hardware Design for SDR}",
+	howpublished = {\url{https://github.com/opendous/Upconverter1v3}},
+}
+
+@misc{openmerc,
+	author = "{OpenHPSDR}",
+	title = "\textit{Mercury -- a direct sampling front end}",
+	howpublished = {\url{http://openhpsdr.org/mercury.php}},
+}
+
+@misc{openher,
+	author = "{OpenHPSDR}",
+	title = "\textit{Hermes -- a DUC/DDC transceiver}",
+	howpublished = {\url{http://openhpsdr.org/hermes.php}},
+}
+
+@misc{hiqsdr,
+	author = "{N2ADR}",
+	title = "\textit{HiQSDR: a Software Defined Radio Transceiver}",
+	howpublished = {\url{http://hiqsdr.com/}},
+}
+
+@misc{elecrow,
+	author = "{Elecrow}",
+	title = "\textit{PCB Prototyping}",
+	howpublished = {\url{http://www.elecrow.com/}},
+}
+
+@misc{alteval,
+	author = "{Altera}",
+	title = "\textit{IP Evaluation and Purchase}",
+	howpublished = {\url{https://www.altera.com/support/support-resources/download/megacore-ip.html}},
+}
+
+@misc{terde0page,
+	author = "{Terasic}",
+	title = "\textit{DE0-Nano Development and Education Board}",
+	howpublished = {\url{http://de0-nano.terasic.com.tw/}},
+}
+
+@misc{embgoertzel,
+	author = "Kevin Banks",
+	title = "\textit{The Goertzel Algorithm}",
+	howpublished = {\url{http://www.embedded.com/design/configurable-systems/4024443/The-Goertzel-Algorithm}},
+}
+
