--- a/thesis/document/tex/glossary.tex
+++ b/thesis/document/tex/glossary.tex
@@ -40,5 +40,5 @@
 
 \newglossaryentry{spice}{name={SPICE}, description={(\textit{ang. Simulation Program with Integrated Circuits Emphasis}) --- oprogramowanie symulujące analogowe układy elektroniczne oraz schematy ideowe}}
 
-\newglossaryentry{cic}{name={CIC}, description={(\textit{ang. Cascaded Integrator–Comb}) --- }}
+\newglossaryentry{cic}{name={CIC}, description={(\textit{ang. Cascaded Integrator–Comb}) --- filtr cyfrowy będący połączeniem integratora, bloku zmiany częstotliwości próbkowania oraz różniczki}}
 
