doc: added hw module architecture

--- a/thesis/document/tex/bibliography/datasheets.bib
+++ b/thesis/document/tex/bibliography/datasheets.bib
@@ -190,7 +190,7 @@
 }
 
 @misc{hiqsdr,
-	author = "{N2ADR}",
+	author = "James Ahlstrom",
 	title = "\textit{HiQSDR: a Software Defined Radio Transceiver}",
 	howpublished = {\url{http://hiqsdr.com/}},
 }
@@ -217,5 +217,11 @@
 	author = "Kevin Banks",
 	title = "\textit{The Goertzel Algorithm}",
 	howpublished = {\url{http://www.embedded.com/design/configurable-systems/4024443/The-Goertzel-Algorithm}},
+}
+
+@misc{kirkvlg,
+	author = "Kirk Weedman",
+	title = "\textit{Verilog Class Lectures}",
+	howpublished = {\url{http://verilog.openhpsdr.org/}},
 }
 
